--- a/app/src/main/res/layout/fragment_keyboard_chunjiin_left.xml
+++ b/app/src/main/res/layout/fragment_keyboard_chunjiin_left.xml
@@ -29,7 +29,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnChunRZa"
+                    android:id="@+id/btn_chun_left_rz"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -45,7 +45,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunSFa"
+                    android:id="@+id/btn_kr_chun_left_sf"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -61,7 +61,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunLa"
+                    android:id="@+id/btn_kr_chun_left_l"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -77,7 +77,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <ImageButton
-                    android:id="@+id/btnChunDELa"
+                    android:id="@+id/imgbtn_kr_chun_left_del"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -100,7 +100,7 @@
 
 
                 <Button
-                    android:id="@+id/btnChunEXa"
+                    android:id="@+id/btn_kr_chun_left_ex"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -116,7 +116,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunQVa"
+                    android:id="@+id/btn_kr_chun_left_qv"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -132,7 +132,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunKa"
+                    android:id="@+id/btn_kr_chun_left_k"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -148,7 +148,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunSPACEa"
+                    android:id="@+id/btn_kr_chun_left_space"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -171,7 +171,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnChunTGa"
+                    android:id="@+id/btn_kr_chun_left_tg"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -187,7 +187,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunWCa"
+                    android:id="@+id/btn_kr_chun_left_wc"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -203,7 +203,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunMa"
+                    android:id="@+id/btn_kr_chun_left_m"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -219,7 +219,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <ImageButton
-                    android:id="@+id/btnChunENTERa"
+                    android:id="@+id/imgbtn_kr_chun_left_enter"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -242,7 +242,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnChunSPECIALa"
+                    android:id="@+id/btn_kr_chun_left_special"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
@@ -258,7 +258,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <ImageButton
-                    android:id="@+id/btnChunLANGa"
+                    android:id="@+id/imgbtn_kr_chun_left_lang"
                     colorFilter="@{kbviewmodel.kbFunctionKeysFontColor}"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
@@ -273,7 +273,7 @@
                     app:customTheme_view="@{3}" />
 
                 <Button
-                    android:id="@+id/btnChunDAa"
+                    android:id="@+id/btn_kr_chun_left_da"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -289,7 +289,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <ImageButton
-                    android:id="@+id/btnChunInita"
+                    android:id="@+id/imgbtn_kr_chun_left_initialize"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -304,7 +304,7 @@
                     app:customTheme_view="@{1}" />
 
                 <Button
-                    android:id="@+id/btnChunDOTa"
+                    android:id="@+id/btn_kr_chun_left_dot"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
@@ -321,7 +321,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnChunATa"
+                    android:id="@+id/btn_kr_chun_left_at"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
