--- a/app/src/main/res/layout/fragment_keyboard_naratgul_basic.xml
+++ b/app/src/main/res/layout/fragment_keyboard_naratgul_basic.xml
@@ -29,7 +29,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnNaR"
+                    android:id="@+id/btn_kr_narat_r"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -45,7 +45,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaS"
+                    android:id="@+id/btn_kr_narat_s"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -61,7 +61,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaK"
+                    android:id="@+id/btn_kr_narat_k"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -77,7 +77,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <ImageButton
-                    android:id="@+id/btnNaDEL"
+                    android:id="@+id/imgbtn_kr_narat_del"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -99,7 +99,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnNaF"
+                    android:id="@+id/btn_kr_narat_f"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -115,7 +115,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaA"
+                    android:id="@+id/btn_kr_narat_a"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -131,7 +131,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaH"
+                    android:id="@+id/btn_kr_narat_h"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -147,7 +147,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaSPACE"
+                    android:id="@+id/btn_kr_narat_space"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -172,7 +172,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnNaT"
+                    android:id="@+id/btn_kr_narat_t"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -188,7 +188,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaD"
+                    android:id="@+id/btn_kr_narat_d"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -204,7 +204,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaL"
+                    android:id="@+id/btn_kr_narat_l"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -220,7 +220,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaDOT"
+                    android:id="@+id/btn_kr_narat_dot"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
@@ -236,7 +236,7 @@
                     app:onTouch="@{kbservice.repeatListenerSpecials[10]}" />
 
                 <ImageButton
-                    android:id="@+id/btnNaENTER"
+                    android:id="@+id/imgbtn_kr_narat_enter"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -259,7 +259,7 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btnNaADD"
+                    android:id="@+id/btn_kr_narat_add"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -275,7 +275,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaM"
+                    android:id="@+id/btn_kr_narat_m"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -291,7 +291,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <Button
-                    android:id="@+id/btnNaSHIFT"
+                    android:id="@+id/btn_kr_narat_shift"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -307,7 +307,7 @@
                     app:customFontStyle="@{kbviewmodel.kbFontType}" />
 
                 <ImageButton
-                    android:id="@+id/btnNaLANG"
+                    android:id="@+id/imgbtn_kr_narat_lang"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="center_horizontal"
@@ -322,7 +322,7 @@
                     app:customTheme_view="@{3}" />
 
                 <Button
-                    android:id="@+id/btnNaSPECIAL"
+                    android:id="@+id/btn_kr_narat_special"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight=".5"
